test | GUDK-du0145 | Aditi | alignment issue in sales invoice creation in foreign debtor

--- a/apps/web-giddh/src/app/proforma-invoice/proforma-invoice.component.scss
+++ b/apps/web-giddh/src/app/proforma-invoice/proforma-invoice.component.scss
@@ -963,6 +963,8 @@ table.table.customer-invoice-table {
 section.static-invoice-table {
     padding-top: 20px;
     margin-top: -20px;
+    align-items: flex-start;
+    flex-direction: column;
 }
 
 .invoice-date-due-date {
